--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+:root {
+  width: 100%;
+}
+
 body {
   margin: 0;
+  display: flex;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+#root {
+  width: 100%;
 }
